# adaptive-trading-os

./: .env.example  .gitignore  README.md  To Do.txt  backtest.py  inference.py  main.py  pyproject.toml  requirements.txt
Essays/: essay_aws_architecture.md  essay_for_traders.md
archive/: README.md
data/: README.md
data/backtests/: backtest_schwab_15m.csv  backtest_schwab_1m.csv  backtest_schwab_5m.csv  backtest_yf_1h.csv
data/paper_trades/: README.md  daily_summary.csv  trade_log.csv
docs/: README.md  adaptive_trading_os_gap_analysis.md  cleanup_candidates.md  folder_architecture_plan.md  logic_reference.md  phase_1_to_7_review.md  refactor_log.md  repo_inventory.md  security_findings.md  user_manual.md
lambda_sync/: lambda_handler.py
lambda_sync/src/: signals.py
rules/: active_rules.json  candidate_rules.json
scripts/dev/: README.md
scripts/maintenance/: README.md  auth_schwab.py
src/: data.py  display.py
src/alerts/: README.md  __init__.py
src/aws/: README.md
src/backtesting/: README.md  __init__.py
src/core/: README.md
src/dashboard/: README.md  __init__.py  app.py  data.py
src/data_sources/: README.md
src/execution/: README.md  __init__.py
src/features/: README.md  __init__.py
src/inference/: README.md  __init__.py
src/ingestion/: README.md
src/outcomes/: README.md
src/risk/: README.md  __init__.py
src/rules/: README.md  __init__.py
src/signals/: README.md  __init__.py  constants.py  orchestrator.py
src/storage/: README.md
tests/: README.md
tests/alerts/: test_formatter.py
tests/features/: test_indicators.py
(+76 files in other folders)
