[project]
name = "adaptive-trading-os"
version = "0.2.0"
description = "MES futures signal bot — research, paper, and live trading OS"
requires-python = ">=3.11"

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "schwab-py>=1.0.0",
    "yfinance>=0.2.40",
    "colorama>=0.4.6",
    "boto3>=1.34.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dashboard = ["streamlit>=1.30.0", "plotly>=5.18.0"]
dev = ["pytest>=8.0.0", "pytest-cov>=5.0.0", "mypy>=1.8.0", "ruff>=0.3.0"]
lambda = ["boto3>=1.34.0"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
